@@ -30,6 +30,7 @@ $ 1.2.0
   * Added new change log (this is it!)
   * Added userame to the compose box
   * Made links to contributors clickable
+  * Image scaling to ensure images are under 1024x1024 (aspect ratio maintained)
   * Mention & DM notifications start on boot
   ! Fixes:
   * Show inline images from retweets
